Implement features in servers: 1. Allow updating the relationship name/alias 2. Support configuring max length limit for response reason of friend request 3. Support replying group join requests and group invitations 4. Support recalling friend requests by the sender (disabled by default) 5. Return accurate status codes for failing to add users as new group members 6. Only allow the group owner to change the type of their groups